# django-controlled-vocabularies

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTEXT.md  GOALS.md  LICENSE  MANIFEST.in  README.md  codecov.yml  pyproject.toml
.github/workflows/: build.yml  publish.yml  tests.yml
controlled_vocabularies/: apps.py  conf.py  models.py
controlled_vocabularies/migrations/: 0001_initial.py  0002_concept.py  0003_alter_concept_options_alter_conceptscheme_options_and_more.py
docs/: ROADMAP.md  brainstorm.md
docs/adr/: 0001-skos-only-scope.md  0002-models-as-source-of-truth.md  0003-relations-canonical-direction.md  0004-uri-identity-and-lifecycle.md  0005-document-plus-projection-storage.md  0006-translations-shared-vs-translated.md  0007-predicate-registry.md  0008-consumption-via-conceptfield.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
memory/: constitution.md
specs/001-vocabulary-concepts/: data-model.md  decisions.md  feature-state.json  plan.md  progress.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-vocabulary-concepts/checklists/: requirements.md
specs/001-vocabulary-concepts/contracts/: python-api.md
tests/: conftest.py  factories.py  settings.py  test_concept.py  test_factories.py  test_identity.py  test_scheme.py  test_smoke.py  test_standards.py
